@@ -178,7 +178,7 @@ Email on Acid - http://www.emailonacid.com/blog/details/C18/doctype_-_the_black_
         <span style="color:<%=color%>;">
           <%= sanitize(@comment.body,
                 tags: %w(p div a i em b blockquote pre ul ol li strong),
-                attributes: %w(href))
+                attributes: %w(href target rel rev))
           %>
         </span>
         <% if @comment.suspicious %>
