@@ -9,7 +9,7 @@
   <p>
     <%= sanitize comment.body,
           tags: %w(p em b i u a br blockquote strong div ul ol li),
-          attributes: %w(href) %>
+          attributes: %w(href target rel rev) %>
   </p>
   <span class="comment_date">
     <%= time_ago_in_words(comment.created_at) %> ago
