@@ -3,13 +3,13 @@
 
     <% cache_expiring("footer/top", 900) do %>
       <span class="footer_categories">
-        <% Category.order("priority ASC").each do |category| %>
+        <% @site_categories.each do |category| %>
           <li>
             <%= link_to category.title, category, title:  category.description %>
           </li>
         <% end %>
       </span>
-      <% Page.all(order: "priority ASC").each do |page| %>
+      <% @site_pages.each do |page| %>
         <li><%= link_to page.title, page, title: page.title %></li>
       <% end %>
       <li><%= link_to "Feeds", feed_path, title: "Multiple RSS Feeds" %></li>
